--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,9 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+    <!-- build:css(.tmp) styles/small.css -->
+    <link rel="stylesheet" media="(max-width:320px)" href="styles/small.css">
+    <!-- endbuild -->
     <script src="//use.typekit.net/fci1nnn.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
   </head>
