--- a/app/index.html
+++ b/app/index.html
@@ -20,11 +20,11 @@
     <script src="//use.typekit.net/fci1nnn.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
   </head>
-  <body ng-app="portalApp">
+  <body role="document" ng-app="portalApp">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
+    <noscript>This website requires JavaScript to function.  Please enable JavaScript or upgrade your browser.</noscript>
     <!-- Add your site or application content here -->
     <div class="container">
       <div class="header">
