--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,41 @@
       <div class="header">
         <p>Massachusetts eLicensing & Permitting Portal</p>
       </div>
+      <div class="image-group"  >
+  
+
+  
+
+  <div class="head-img">
+    <img class="img-responsive"  src="http://placehold.it/1000x500/dda037.png&text=..." alt="Head Image" role="img"></div>
+  <div class="seal-img">
+    <img class="img-repsonsive"  src="../images/commonwealth_seal_white.png" alt="State Seal" role="img">
+  </div>
+ 
+
+  <div class="head-text">
+    <p>
+      eLicensing & Permitting Portal
+    </p>
+    <h2>
+      You work hard for your business. Let us make it easier for you.
+    </h2>
+  </div>
+
+
+
+  </div>
+
+  <div class="get-started">
+
+      <div class="element">
+        <p>Get Started Now</p>
+      </div>  
+
+  </div>
+  <div  class="headline">
+    <h2>We've made it way easier to search for licenses and permits to get your business up and running faster and easier than ever before. Get started below by searching for specific licenses or browsing popular ones.</h2>
+  </div>
 
       <div ng-view=""></div>
 
@@ -77,7 +112,9 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/results.js"></script>
         <script src="scripts/controllers/about.js"></script>
+
         <!-- endbuild -->
 </body>
 </html>
