--- a/app/index.html
+++ b/app/index.html
@@ -115,6 +115,7 @@
         <script src="scripts/controllers/results.js"></script>
         <script src="scripts/controllers/about.js"></script>
 
+        <script src="scripts/services/fetch.js"></script>
         <!-- endbuild -->
 </body>
 </html>
