--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html class="no-js">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>MA eLicensing Portal</title>
@@ -31,23 +32,23 @@
     <div class="container">
       <div class="header">
         <p>Massachusetts eLicensing & Permitting Portal</p>
-      </div>
-      <div class="image-group"  >
+    </div>
+  <div class="image-group"  >
   
 
   
 
   <div class="head-img">
-    <img class="img-responsive"  src="http://placehold.it/1000x500/dda037.png&text=..." alt="Head Image" role="img"></div>
+    <img class="img-responsive"  src="http://placehold.it/1000x500/dda037.png&text=..." alt="background" role="img"></div>
   <div class="seal-img">
     <img class="img-repsonsive"  src="../images/commonwealth_seal_white.png" alt="State Seal" role="img">
   </div>
  
 
   <div class="head-text">
-    <p>
+    <h1> <!-- needs a heading -->
       eLicensing & Permitting Portal
-    </p>
+    </h1>
     <h2>
       You work hard for your business. Let us make it easier for you.
     </h2>
@@ -60,7 +61,7 @@
   <div class="get-started">
 
       <div class="element">
-        <p>Get Started Now</p>
+        <h1>Get Started Now</h1> <!-- needs a heading -->
       </div>  
 
   </div>
