--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html class="no-js">
-<html lang="en">
+<html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
     <title>MA eLicensing Portal</title>
