UI-router setup

--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
   
 
   <div class="head-img">
-    <img class="img-responsive"  src="http://placehold.it/1000x500/dda037.png&text=..." alt="background" role="img"></div>
+    <img class="img-responsive"  src="http://placehold.it/1000x400/dda037.png&text=..." alt="background" role="img"></div>
   <div class="seal-img">
     <img class="img-repsonsive"  src="../images/commonwealth_seal_white.png" alt="State Seal" role="img">
   </div>
@@ -68,7 +68,7 @@
     <h2>We've made it way easier to search for licenses and permits to get your business up and running faster and easier than ever before. Get started below by searching for specific licenses or browsing popular ones.</h2>
   </div>
 
-      <div ng-view=""></div>
+      <div ui-view></div>
 
       <div class="footer">
         <p><span class="glyphicon glyphicon-copyright-mark"></span> 2014 Commonwealth of Massachussetts.<br>
@@ -109,6 +109,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
