passing requested data between controllers

--- a/app/index.html
+++ b/app/index.html
@@ -129,6 +129,7 @@
         <script src="scripts/controllers/popular.js"></script>
         <script src="scripts/controllers/category.js"></script>
         <script src="scripts/controllers/search.js"></script>
+        <script src="scripts/services/gsaservice.js"></script>
         <!-- endbuild -->
 </body>
 </html>
