--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,9 @@
   <div class="body-wrapper" >
 
      <div ui-view="search"></div>
+<!--
+     <div ui-view="results" ></div>
+ -->    
      <div ui-view="popular"></div>
      <div ui-view="category"></div>
      
