routing with urls is functional

--- a/app/index.html
+++ b/app/index.html
@@ -69,13 +69,11 @@
   </div>
   <div class="body-wrapper" >
 
-     <div ui-view="search"></div>
-<!--
-     <div ui-view="results" ></div>
- -->    
+     <div ui-view></div>
+<!--  
      <div ui-view="popular"></div>
      <div ui-view="category"></div>
-     
+ -->    
   </div><!-- /.body-wrapper -->
 
 
