--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,7 @@
 
 
     <div class="footer">
+      <div>
         <p><span class="glyphicon glyphicon-copyright-mark"></span> 2014 Commonwealth of Massachussetts.<br>
         Mass.Gov <span class="glyphicon glyphicon-registration-mark"></span> is a registered service mark of the Commonwealth of Massachusetts</p>
       </div>
